--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.1",
     "nodemailer": "^6.6.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.0",
     "react-redux": "^7.2.5",
